<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/row_divider"
    android:showDividers="middle"
    android:padding="10dp"
    android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ripple"
    android:clickable="true"
    android:orientation="horizontal"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:id="@+id/dnd_layout">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:clickable="false">


<TextView
    android:id="@+id/dnd_text"
    android:clickable="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/do_not_disturb"
    android:textSize="@dimen/primary_text_size"
    android:textColor="@color/primary_text_default_material_light" />
        <TextView
            android:layout_width="wrap_content"
            android:clickable="false"
            android:layout_height="wrap_content"
            android:text="@string/dnd_description"
            android:textSize="@dimen/sec_text_size"
            android:textColor="@color/secondary_text_default_material_light"/>
    </LinearLayout>
<android.support.v7.widget.SwitchCompat

    android:id="@+id/silent_switch1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme"
    android:clickable="true" />


</LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/linearLayout1">


        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scheduled"
            android:textSize="@dimen/sec_text_size"
            android:gravity="bottom"
            android:textColor="@color/secondary_text_default_material_light" />



    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/repeat_layout">


        <TextView
            android:id="@+id/repeat_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/repeat_button"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/primary_dark_material_dark" />
        <android.support.v7.widget.SwitchCompat

            android:id="@+id/repeat_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:clickable="true" />



    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:id="@+id/setTime_layout">

        <TextView
            android:id="@+id/setTime"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/primary_dark_material_dark"
            android:clickable="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">"
            android:textSize="@dimen/symbol_size" />



    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/linearLayout4">


        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exceptions"
            android:textSize="@dimen/sec_text_size"
            android:gravity="bottom"
            android:textColor="@color/secondary_text_default_material_light" />



    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:background="@drawable/ripple"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/exceptions_layout"
        android:clickable="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="false">


        <TextView
            android:layout_weight="1"
            android:id="@+id/exceptions_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exception_settings"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/primary_dark_material_dark"
            android:clickable="false" />
            <TextView
                android:id="@+id/exceptions_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 exceptions"
                android:textSize="@dimen/sec_text_size"
                android:textColor="@color/secondary_text_default_material_light"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">"
            android:textSize="@dimen/symbol_size" />



    </LinearLayout>


</LinearLayout>