<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/row_divider"
    android:showDividers="middle"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">
    <LinearLayout

        android:layout_width="match_parent"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/allowcalls">


        <TextView
            android:layout_weight="1"
            android:id="@+id/allow_calls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/allow_calls_from_exceptions"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/primary_dark_material_dark"
            android:clickable="false" />
        <android.support.v7.widget.SwitchCompat

            android:id="@+id/calls_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            android:clickable="true" />



    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/linearLayout1">


        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exceptions_list"
            android:textSize="@dimen/sec_text_size"
            android:gravity="bottom"
            android:textColor="@color/secondary_text_default_material_light" />



    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/linearLayout2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">"
            android:textSize="20sp"
            android:visibility="gone"
            android:id="@+id/arrow1" />


        <TextView
            android:layout_weight="1"
            android:id="@+id/allContacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_contacts"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/primary_dark_material_dark"
            android:clickable="false" />



    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/linearLayout3">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=">"
        android:textSize="20sp"
        android:id="@+id/arrow2"
            android:visibility="gone"/>


        a<TextView
            android:layout_weight="1"
            android:id="@+id/exceptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Exceptions"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/primary_dark_material_dark"
            android:clickable="false" />



    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/linearLayout4">


        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exceptions"
            android:textSize="@dimen/sec_text_size"
            android:gravity="bottom"
            android:textColor="@color/secondary_text_default_material_light" />



    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:id="@+id/linearLayout5">
        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/add_button"
            android:layout_height="40dp"
            android:src="@drawable/contacts"/>

        <TextView
            android:id="@+id/add_contact"
            android:paddingLeft="115dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contact"
            android:textSize="@dimen/sec_text_size"
            android:gravity="bottom"
            android:textColor="@color/secondary_text_default_material_light" />



    </LinearLayout>

</LinearLayout>
